--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -44,6 +44,9 @@ $gradient-bottom-right: linear-gradient(135deg, #34654cff, #63a683ff, #e7d7c1ff,
 $gradient-top-left: linear-gradient(225deg, #34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #735751ff);
 $gradient-bottom-left: linear-gradient(315deg, #34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #735751ff);
 $gradient-radial: radial-gradient(#34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #735751ff); */
+html {
+  scroll-behavior: smooth;
+}
 
 .App {
   text-align: center;
@@ -85,6 +88,7 @@ $gradient-radial: radial-gradient(#34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #7
 }
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&display=swap");
 .header {
+  background-color: white;
   font-weight: 600;
   font-family: 'Playfair Display', serif;
   font-size: 20px;
@@ -96,8 +100,9 @@ $gradient-radial: radial-gradient(#34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #7
 }
 .imagename {
   display: flex;
+  margin-right: 30px
 }
-.aboutcontact {
+.aboutContact {
   display: flex;
   align-items: center;
   justify-content: right;
@@ -117,8 +122,8 @@ $gradient-radial: radial-gradient(#34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #7
 #about {
   position: relative;
   right: 10px;
-  background-color: var(--mint);
-  width: 100px;
+  background-color: var(--almond);
+  width: 109px;
   height: 80px;
   line-height: 1.5;
   display: flex;
@@ -129,11 +134,44 @@ $gradient-radial: radial-gradient(#34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #7
 #contact {
   position: relative;
   right: 10px;
-  background-color: var(--hunter-green);
-  width: 100px;
+  background-color: var(--mint);
+  width: 109px;
   height: 80px;
   line-height: 1.5;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#helpus {
+  position: relative;
+  right: 10px;
+  background-color: var(--hunter-green);
+  width: 109px;
+  height: 80px;
+  line-height: 1.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width : 480px){
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #image {
+    transform: translateX(-10px);
+  }
+}
+
+.helpUs {
+  
+}
+
+.helpUsText {
+  font-weight: 600;
+  font-family: 'Playfair Display', serif;
+  font-size: 20px;
 }
