--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -121,7 +121,7 @@ html {
 
 #about {
   position: relative;
-  right: 10px;
+  /* right: 10px; */
   background-color: var(--almond);
   width: 109px;
   height: 80px;
@@ -133,7 +133,7 @@ html {
 
 #contact {
   position: relative;
-  right: 10px;
+  /* right: 10px; */
   background-color: var(--mint);
   width: 109px;
   height: 80px;
@@ -145,7 +145,7 @@ html {
 
 #helpus {
   position: relative;
-  right: 10px;
+  /* right: 10px; */
   background-color: var(--hunter-green);
   width: 109px;
   height: 80px;
@@ -167,11 +167,78 @@ html {
 }
 
 .helpUs {
-  
+  background-image: 
+  linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  url("./img/peakpx_m.jpg");
+  height: 400px;
 }
 
 .helpUsText {
   font-weight: 600;
   font-family: 'Playfair Display', serif;
-  font-size: 20px;
+  font-size: 30px;
+  color: white;
+  margin-left: 30px;
+  margin-top: 15px;
+}
+.buttons {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 300px;
+}
+.donate {
+  position: relative;
+  font-weight: 600;
+  font-family: 'Playfair Display', serif;
+  font-size: 30px;
+  color: var(--almond);
+  margin-left: 30px;
+  margin-top: 15px;
+  background-color: var(--hunter-green);
+  width: 250px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.donateSpan
+{
+    opacity: .3;
+    position:absolute;
+    width:100%;
+    height:100%;
+    left:0;
+    top:0;
+    z-index:1;
+}
+
+
+.bestMovie {
+  position: relative;
+  font-weight: 600;
+  font-family: 'Playfair Display', serif;
+  font-size: 30px;
+  color: var(--almond);
+  margin-left: 30px;
+  margin-top: 15px;
+  width: 250px;
+  height: 100px;
+  border: 4px var(--hunter-green) solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.whatchSpan
+{
+    opacity: .3;
+    position:absolute;
+    width:100%;
+    height:100%;
+    left:0;
+    top:0;
+    z-index:1;
 }
