--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -1,10 +1,10 @@
 /* CSS HEX / */
 :root {
---hunter-green: #34654cff;
---mint: #63a683ff;
---almond: #e7d7c1ff;
---beaver: #a78a7fff;
---liver: #735751ff;
+  --hunter-green: #34654cff;
+  --mint: #63a683ff;
+  --almond: #e7d7c1ff;
+  --beaver: #a78a7fff;
+  --liver: #735751ff;
 }
 /* / CSS HSL / */
 /* --hunter-green: hsla(149, 32%, 30%, 1);
@@ -84,15 +84,18 @@ $gradient-radial: radial-gradient(#34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #7
   }
 }
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&display=swap");
+#root {
+  font-family: "Playfair Display", normal;
+}
+
 .header {
   font-weight: 600;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 20px;
   display: flex;
   top: 1px;
   justify-content: space-between;
   position: sticky;
-  
 }
 .imagename {
   display: flex;
@@ -137,3 +140,32 @@ $gradient-radial: radial-gradient(#34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #7
   justify-content: center;
   align-items: center;
 }
+
+.welcome {
+  background-image: url("./img/welcome_01.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.welcomeText {
+  font-size: large;
+  width: 35vw;
+  color: var(--almond);
+  margin-left: 15px;
+  line-height: 1.5;
+}
+
+.helpUsButton {
+  background-color: var(--mint);
+  font-family: Playfair Display;
+  font-size: large;
+  padding: 5px 10px;
+  border-radius: 20px;
+  margin-left: 30px;
+}
+
+
