--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -100,6 +100,8 @@ $gradient-radial: radial-gradient(#34654cff, #63a683ff, #e7d7c1ff, #a78a7fff, #7
   align-items: center;
 }
 
+/*AboutUs*/
+
 .aboutUs{
   display: flex;
   flex-direction: row;
@@ -117,8 +119,6 @@ p{
   text-justify: inter-word;
 }
 
-#aboutUsImg{
-}
 .socialsLogo{
   width: 50px;
   margin: 5px;
@@ -128,4 +128,18 @@ p{
   background-color: var(--mint);
 }
 
+/*Footer*/
 
+.footer{
+  bottom: 10px;
+  text-align: center;
+  }
+
+.badge{
+  width: 110px;
+  margin: 5px;
+}
+
+.footer p{
+  text-align: center;
+}
