--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -146,6 +146,7 @@ html {
   padding: 5px 10px;
   border-radius: 20px;
   margin-left: 30px;
+}
 
 @media screen and (max-width : 480px){
   .header {
