--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -91,6 +91,9 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 600;
+  font-family: 'Playfair Display', serif;
+  font-size: 27px;
 }
 
 #contact {
@@ -103,6 +106,9 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 600;
+  font-family: 'Playfair Display', serif;
+  font-size: 27px;
 }
 
 #helpus {
@@ -115,6 +121,9 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 600;
+  font-family: 'Playfair Display', serif;
+  font-size: 27px;
 }
 
 @media screen and (max-width : 480px){
@@ -133,6 +142,10 @@ html {
   linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
   url("./img/peakpx_m.jpg");
   height: 400px;
+  background-repeat:no-repeat;
+  background-size: 100%;
+  /* background-size:contain; */
+  /* background-position:center; */
 }
 
 .helpUsText {
@@ -163,6 +176,8 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 3px var(--hunter-green) solid;
+  transition: 0.3s
 }
 
 .donateSpan
@@ -176,22 +191,58 @@ html {
     z-index:1;
 }
 
+.donate:hover {
+  background-color: rgba(0, 0, 0, 0.415);
+  border: 3px var(--hunter-green) solid;
+  color: var(--hunter-green);
+}
+
 
 .bestMovie {
+  background-color: rgba(0, 0, 0, 0.264);
   position: relative;
   font-weight: 600;
   font-family: 'Playfair Display', serif;
   font-size: 30px;
-  color: var(--almond);
+  color: var(--hunter-green);
   margin-left: 30px;
   margin-top: 15px;
   width: 250px;
   height: 100px;
-  border: 4px var(--hunter-green) solid;
+  border: 3px var(--hunter-green) solid;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.3s;
 
+}
+
+.bestMovie:hover {
+  background-color: var(--hunter-green);
+  border: 3px var(--hunter-green) solid;
+  color: var(--almond);
+}
+
+.whatchSpan
+{
+    opacity: .3;
+    position:absolute;
+    width:100%;
+    height:100%;
+    left:0;
+    top:0;
+    z-index:1;
+}
+
+.donateSpan
+{
+    opacity: .3;
+    position:absolute;
+    width:100%;
+    height:100%;
+    left:0;
+    top:0;
+    z-index:1;
 }
 
 .whatchSpan
