--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -257,3 +257,122 @@ p {
   border-radius: 50%;
   background-color: var(--mint);
 }
+
+* {
+  margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+.App {
+  border-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vw;
+}
+
+.carousel{
+  display: flex;
+  height: 400px;
+  width: 100%;
+  max-width: 800px;
+}
+
+.carouselWrapper{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.carouselCard{
+  display: flex;
+  flex: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow:hidden;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.15);
+  box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.15);
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(.8);
+  transition: 0.5s ease-in-out;
+}
+
+.carouselCard_active{
+  opacity: 1;
+  transform: scale(1);
+  pointer-events: visible;
+}
+
+.cardImage{
+  width: 100%;
+  object-fit: cover;
+}
+
+.cardOverlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  display: flex;
+  padding: 40px 30px;
+  align-items: flex-end;
+}
+
+.cardTitle{
+  color: white;
+  font-size: 30px;
+}
+.carouselArrowLeft, .carouselArrowRight{
+  position: absolute;
+  font-size: 40px;
+  top: 50%;
+  transform: translate(0, -50%);
+  background-color: var(--mint);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  padding-bottom: 7px;
+  cursor: pointer;
+}
+
+.carouselArrowLeft{
+  left: 15px;
+}
+
+.carouselArrowRight{
+  right: 15px
+}
+
+.carouselPagination {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.paginationDot {
+  height: 10px;
+  width: 10px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.paginationDot :hover{
+  transform: scale(1.2);
+}
+
+.paginationDot_active {
+  background-color: var(--mint);
+}
