--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -5,6 +5,7 @@
   --almond: #e7d7c1ff;
   --beaver: #a78a7fff;
   --liver: #735751ff;
+  background-color: var(--beaver);
 }
 /* / CSS HSL / */
 /* --hunter-green: hsla(149, 32%, 30%, 1);
@@ -298,7 +299,10 @@ html {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 15px;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 2%;
+  padding-right: 2%;
   background-color: var(--almond);
 }
 
