--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -197,7 +197,24 @@ html {
   border-radius: 15px;
   margin-left: 15px;
   margin-top: 7px;
+  transition: 0.2s;
 }
+
+
+.helpUsButton:link, .helpUsButton:visited {
+  font-weight: 600;
+  font-family: 'Playfair Display', serif;
+  font-size: x-large;
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  
+}
+
+.helpUsButton:hover {
+  background-color: rgba(99, 166, 131, 0.79);
+}
+
 
 @media screen and (max-width: 800px) {
   .header {
