--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -523,3 +523,40 @@ box-sizing: border-box;
   text-align: center;
 }
 
+.top-to-btm{
+  position: relative;
+}
+.icon-position{
+  position: fixed;
+  bottom: 40px;
+  right: 25px;
+  z-index: 20;
+}
+.icon-style{
+  background-color: var(--mint);
+  border: 2px solid --almond;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  color: var(--almond);
+  cursor: pointer;
+  animation: movebtn 3s ease-in-out infinite;
+  transition: all .5s ease-in-out;
+}
+.icon-style:hover{
+  animation: none;
+  background: var(--hunter-green);
+  color: var(--almond);
+  border: 2px solid var(--almond);
+}
+@keyframes movebtn {
+  0%{
+    transform: translateY(0px);
+  }
+  50%{
+    transform: translateY(-15px);
+  }
+  100%{
+    transform: translateY(0px);
+  }
+}
