--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -68,6 +68,7 @@ html {
 .imagename {
   display: flex;
   margin-right: 30px;
+  
 }
 .aboutContact {
   display: flex;
@@ -77,6 +78,7 @@ html {
 #image {
   width: 80px;
   height: 80px;
+  cursor: pointer;
 }
 
 #name {
