--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -55,7 +55,7 @@ html {
 }
 
 .header {
-  background-color: white;
+  background-color: var(--liver);
   font-weight: 600;
   font-family: "Playfair Display", serif;
   font-size: 40px;
@@ -65,6 +65,15 @@ html {
   position: sticky;
   z-index: 1;
 }
+
+.header span{
+  color: var(--almond);
+}
+
+.header img{
+  padding: 3px;
+}
+
 .imagename {
   display: flex;
   margin-right: 30px;
