--- a/save-horses/src/App.css
+++ b/save-horses/src/App.css
@@ -460,7 +460,8 @@ p {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  padding-bottom: 7px;
+  padding-top: 3px;
+  padding-bottom: 3px;
   cursor: pointer;
 }
 
